<resources>
    <string name="app_name">Smart Latch App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="smart_latch_url">https://europe-west2-smart-latch.cloudfunctions.net</string>
    <string name="test_url">http://10.0.2.2:3000</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="current_door_status_hint">NFC Authenticated: </string>
    <string name="door_state_locked">Locked</string>
    <string name="door_state_open">Open</string>
    <string name="server_client_id">639400548732-9ga9sg95ao0drj5sdtd3v561adjqptbr.apps.googleusercontent.com</string>
    <string name="app_greeting">Welcome to Smart Latch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="test_door_id">Test Door ID</string>
    <string name="test_door_desc">Door for testing.</string>
    <string name="message_write_error">Error Writing Message !</string>
    <string name="message_write_success">Successfully written to Tag !</string>
    <string name="message_write_progress">Writing to Tag..</string>
    <string name="message_tag_detected">NFC Tag Detected !</string>
    <string name="message_read_tag">Scan NFC Tag</string>
    <string name="message_tap_tag">This door is uninitialised. Tap it\'s NFC tag to initialise it!</string>
    <string name="hint_message">Message</string>
    <string name="nfc_waiting">Tap door NFC tag now \nto authenticate.</string>
    <string name="grant_access">Grant another user \naccess to this door.</string>
    <string name="takeAPhoto">Take a selfie</string>
    <string name="uploadAPhoto">Upload photo</string>
    <string name="nfc_waiting_home">Tap a door\'s NFC tag now to authenticate.</string>
    <string name="door_state">Door State:</string>
</resources>