<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ThisDoorActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/back_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:layout_gravity="left"
            android:background="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/textview_doorid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/test_door_id"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/back_nav"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>


    <ImageButton
        android:id="@+id/nfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80px"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toTopOf="@id/grant_access"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar2"
        app:srcCompat="@drawable/nfc" />


    <ImageButton
        android:id="@+id/grant_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:backgroundTintMode="screen"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:layout_constraintBottom_toTopOf="@id/textview_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nfc"
        app:srcCompat="@drawable/grant_access" />



    <TextView
        android:id="@+id/nfcText"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_marginBottom="100dp"

        android:fontFamily="serif-monospace"
        android:text="@string/nfc_waiting"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/grantText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@id/nfc"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        app:layout_constraintVertical_bias="0.875" />

    <TextView
        android:id="@+id/grantText"
        android:layout_width="198dp"
        android:layout_height="80dp"
        android:layout_marginLeft="10px"
        android:fontFamily="serif-monospace"
        android:shadowColor="#FFFFFF"
        android:text="@string/grant_access"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/textview_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/grant_access"
        app:layout_constraintTop_toBottomOf="@id/nfcText" />

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/current_door_status_hint"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text=""
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@id/refreshBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grant_access"/>
    <TextView
        android:id="@+id/textview_door_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/door_state"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text=""
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@id/refreshBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_result"/>
    <Button
        android:id="@+id/refreshBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_result"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
